--- a/DubboDemo3/DubboDemo3Provide/src/main/resources/application.yml
+++ b/DubboDemo3/DubboDemo3Provide/src/main/resources/application.yml
@@ -7,8 +7,7 @@ dubbo:
     name: dubbo
     port: 28081
   registry:
-    address: zookeeper://192.168.119.145
-    port: 2181
-#    timeout: 100000
+    address: zookeeper://192.168.119.146:2182
+    timeout: 100000
     parameters:
-      blockUntilConnectedWait: 50
+      blockUntilConnectedWait: 250
